[tool.poetry]
name = "sentiml"
version = "0.0.1"
description = "Sentinel for ML Models"
authors = ["Lissa Hyacinth <lissa@shareableai.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "sentiml"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
weaver-json = ">=0.0.2"


[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
pytest-env = "*"
pytest-cov = "*"
pytest-lazy-fixture = "*"
coverage = "*"


[tool.poetry.group.dev.dependencies]
pytorch-forecasting = "^1.0.0"
torch = "^2.0.1"
pandas = "^2.0.3"
pytorch-lightning = "^2.0.4"
transformers = "^4.30.2"
timm = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"